fix Scrollbar at collection menu is gone #171

--- a/src/static/css/maps.css
+++ b/src/static/css/maps.css
@@ -1210,7 +1210,7 @@ ul.types > li{
 }
 .collection-list-wrapper .nav{
 	width: 350px;
-	overflow: scroll;
+	overflow: hidden;
 }
 .collection-list-wrapper a{
 	line-height: 30px;
